--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,20 @@
-numpy==1.26.4
-pandas==2.1.4
-openpyxl>=3.1.2
-Pillow>=9.5
-tqdm>=4.66
-
-# CV stack (headless)
-opencv-python-headless==4.9.0.80
-
-# ML
-torch==2.3.1+cpu
-torchvision==0.18.1+cpu
---extra-index-url https://download.pytorch.org/whl/cpu
-
-deepface==0.0.96
-facenet-pytorch==2.5.3
+torch==1.13.1
+torchvision==0.14.1
 timm==0.9.16
+facenet-pytorch==2.5.3
+deepface==0.0.95
 emotiefflib==1.1.1
+opencv-python-headless==4.9.0.80
+numpy==1.24.3
+pandas==2.1.4
+openpyxl==3.1.5
+pillow==12.0.0
+requests==2.32.5
+tqdm==4.67.1
+
+tensorflow-macos==2.16.2
+tensorflow-metal==1.1.0
+tensorboard==2.16.2
+typing_extensions==4.5.0
+protobuf==4.23.4
+tf-keras>=2.16,<2.17
