--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,9 @@ __pycache__/
 *.pyc
 .DS_Store
 **/.DS_Store
-emotion_debug/
+ 
+ # User-provided inputs (do not commit)
+videos/*
+refs/*
+!videos/.gitkeep
+!refs/.gitkeep
